# mobiinfra-oh

./: README.md
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/include/MNN/expr/: NeuralNetWorkOp.hpp
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: FloatWindow.ets  Index.ets  LogView.ets  OpTest.ets
entry/src/main/ets/utils/: LlmServer.ets
entry/src/main/python/: harmony_agent.py  hdc_server.py
entry/src/main/python/prompts/: e2e_v2_agent_prefix.md  e2e_v2_agent_prefix_noreason.md  e2e_v2_agent_prefixorigin.md  e2e_v2_agent_prefixtest.md  e2e_v2_agent_variable.md  e2e_v2_agent_variable_noreason.md  e2e_v2_agent_variableorigin.md  e2e_v2_agent_variabletest.md
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/rawfile/custom_opp/vendors/customize/config/: npu_custom_opinfo.json
entry/src/main/resources/rawfile/custom_opp/vendors/customize/op_impl/ai_core/tbe/config/kirin9030/: aic-kirin9030-ops-info.json
entry/src/main/resources/rawfile/custom_opp/vendors/customize/op_impl/ai_core/tbe/customize_impl/dynamic/: layer_norm_custom.cpp  layer_norm_custom.py
